--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "halloween-santa",
   "version": "0.1.0",
+  "homepage": "http://elisatruong.me/secret-halloween/",
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
     "firebase": "^7.2.1",
+    "gh-pages": "^2.1.1",
     "inspector": "^0.5.0",
     "install": "^0.13.0",
     "react": "^16.10.2",
@@ -15,6 +17,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "deploy" : "npm run build&&gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
